/**
 * Qdrant å‘é‡æ•°æ®åº“åè®®é€‚é…å™¨ - ç”Ÿäº§çº§å®ç°
 * 
 * åŸºäº @qdrant/js-client-rest åº“
 * æ”¯æŒ HTTP/gRPC ä¼ è¾“ã€API Key è®¤è¯ã€é›†åˆç®¡ç†
 * èµ„æºå‘ç°ï¼šåˆ—å‡ºé›†åˆã€è·å–é›†åˆä¿¡æ¯ï¼ˆç»´åº¦ã€è·ç¦»åº¦é‡ã€ç‚¹æ•°é‡ï¼‰
 */

import { QdrantClient } from '@qdrant/js-client-rest';
import { BaseAdapter, normalizeError, AdapterError, AdapterErrorCode } from './base';
import type { ConnectionTestResult, DiscoveredEndpoint, ProtocolConfigSchema, HealthCheckResult } from '../../../shared/accessLayerTypes';

export class QdrantAdapter extends BaseAdapter {
  readonly protocolType = 'qdrant' as const;
  protected defaultTimeoutMs = 15000;

  readonly configSchema: ProtocolConfigSchema = {
    protocolType: 'qdrant',
    label: 'Qdrant å‘é‡æ•°æ®åº“',
    icon: 'ğŸ”',
    description: 'å‘é‡æ£€ç´¢',
    category: 'database',
    connectionFields: [
      { key: 'host', label: 'ä¸»æœºåœ°å€', type: 'string', required: true, placeholder: 'localhost', description: 'Qdrant æœåŠ¡å™¨ä¸»æœºåæˆ– IP' },
      { key: 'port', label: 'HTTP ç«¯å£', type: 'number', required: true, defaultValue: 6333 },
      { key: 'grpcPort', label: 'gRPC ç«¯å£', type: 'number', required: false, defaultValue: 6334, description: 'gRPC ä¼ è¾“ç«¯å£ï¼ˆé«˜æ€§èƒ½åœºæ™¯ï¼‰' },
      { key: 'useHttps', label: 'ä½¿ç”¨ HTTPS', type: 'boolean', required: false, defaultValue: false },
      { key: 'preferGrpc', label: 'ä¼˜å…ˆ gRPC', type: 'boolean', required: false, defaultValue: false, description: 'ä½¿ç”¨ gRPC ä¼ è¾“ä»¥è·å¾—æ›´é«˜æ€§èƒ½' },
    ],
    authFields: [
      { key: 'apiKey', label: 'API Key', type: 'password', required: false, description: 'Qdrant Cloud æˆ–è‡ªéƒ¨ç½²çš„ API Key' },
      { key: 'checkCompatibility', label: 'æ£€æŸ¥ç‰ˆæœ¬å…¼å®¹æ€§', type: 'boolean', required: false, defaultValue: true },
    ],
    advancedFields: [
      { key: 'timeout', label: 'è¯·æ±‚è¶…æ—¶(ms)', type: 'number', required: false, defaultValue: 30000 },
      { key: 'retryCount', label: 'é‡è¯•æ¬¡æ•°', type: 'number', required: false, defaultValue: 3 },
      { key: 'retryInterval', label: 'é‡è¯•é—´éš”(ms)', type: 'number', required: false, defaultValue: 100 },
      { key: 'optimizersConfig', label: 'ä¼˜åŒ–å™¨é…ç½® (JSON)', type: 'json', required: false, description: 'ç´¢å¼•ä¼˜åŒ–å™¨å‚æ•°ï¼ˆmemmap_threshold, indexing_threshold ç­‰ï¼‰' },
      { key: 'walConfig', label: 'WAL é…ç½® (JSON)', type: 'json', required: false, description: 'Write-Ahead Log é…ç½®ï¼ˆwal_capacity_mb, wal_segments_aheadï¼‰' },
    ],
  };

  private createClient(params: Record<string, unknown>, auth?: Record<string, unknown>): QdrantClient {
    const host = params.host as string;
    const port = (params.port as number) || 6333;
    const useHttps = (params.useHttps as boolean) || false;

    const url = `${useHttps ? 'https' : 'http'}://${host}:${port}`;

    const clientOptions: any = {
      url,
      timeout: (params.timeout as number) || 30000,
    };

    if (auth?.apiKey) {
      clientOptions.apiKey = auth.apiKey as string;
    }

    if (params.preferGrpc) {
      clientOptions.port = (params.grpcPort as number) || 6334;
    }

    if (auth?.checkCompatibility === false) {
      clientOptions.checkCompatibility = false;
    }

    return new QdrantClient(clientOptions);
  }

  protected async doTestConnection(
    params: Record<string, unknown>,
    auth?: Record<string, unknown>
  ): Promise<ConnectionTestResult> {
    const host = params.host as string;
    if (!host) {
      return { success: false, latencyMs: 0, message: 'ä¸»æœºåœ°å€ä¸èƒ½ä¸ºç©º' };
    }

    try {
      const client = this.createClient(params, auth);

      // å¥åº·æ£€æŸ¥
      const healthResult = await (client as any).api('cluster').clusterStatus();

      // è·å–é›†åˆåˆ—è¡¨
      const collections = await client.getCollections();

      // è·å–é¥æµ‹æ•°æ®
      let telemetry: any = null;
      try {
        telemetry = await (client as any).api('service').telemetry({});
      } catch { /* é¥æµ‹å¯èƒ½ä¸å¯ç”¨ */ }

      const details: Record<string, unknown> = {
        collectionsCount: collections.collections.length,
        collections: collections.collections.map(c => c.name),
        clusterStatus: healthResult,
      };

      if (telemetry?.result) {
        details.version = telemetry.result.app?.version;
        details.commitHash = telemetry.result.app?.startup;
      }

      return {
        success: true,
        latencyMs: 0,
        message: `Qdrant ${host}:${params.port || 6333} è¿æ¥æˆåŠŸ (${collections.collections.length} ä¸ªé›†åˆ)`,
        serverVersion: (details.version as string) || 'Unknown',
        details,
      };
    } catch (err) {
      return {
        success: false,
        latencyMs: 0,
        message: `Qdrant è¿æ¥å¤±è´¥: ${(err as Error).message}`,
        details: { host, port: params.port, error: (err as Error).message },
      };
    }
  }

  protected async doDiscoverResources(
    params: Record<string, unknown>,
    auth?: Record<string, unknown>
  ): Promise<DiscoveredEndpoint[]> {
    const client = this.createClient(params, auth);
    const endpoints: DiscoveredEndpoint[] = [];

    try {
      const collections = await client.getCollections();

      for (const col of collections.collections) {
        try {
          const info = await client.getCollection(col.name);

          endpoints.push({
            resourcePath: col.name,
            resourceType: 'collection',
            name: `å‘é‡é›†åˆ: ${col.name}`,
            dataFormat: 'json',
            schemaInfo: {
              vectorSize: info.config?.params?.vectors && typeof info.config.params.vectors === 'object' && 'size' in info.config.params.vectors
                ? (info.config.params.vectors as any).size
                : 'multi-vector',
              distance: info.config?.params?.vectors && typeof info.config.params.vectors === 'object' && 'distance' in info.config.params.vectors
                ? (info.config.params.vectors as any).distance
                : 'unknown',
              onDiskPayload: info.config?.params?.on_disk_payload,
              shardNumber: info.config?.params?.shard_number,
              replicationFactor: info.config?.params?.replication_factor,
              writeConsistencyFactor: info.config?.params?.write_consistency_factor,
            },
            metadata: {
              pointsCount: info.points_count,
              indexedVectorsCount: info.indexed_vectors_count,
              segmentsCount: info.segments_count,
              status: info.status,
              optimizerStatus: info.optimizer_status,
            },
          });

          // å‘ç°å‘½åå‘é‡
          if (info.config?.params?.vectors && typeof info.config.params.vectors === 'object' && !('size' in info.config.params.vectors)) {
            for (const [vecName, vecConfig] of Object.entries(info.config.params.vectors as Record<string, any>)) {
              endpoints.push({
                resourcePath: `${col.name}/${vecName}`,
                resourceType: 'collection',
                name: `å‘½åå‘é‡: ${col.name}/${vecName}`,
                dataFormat: 'json',
                schemaInfo: {
                  vectorSize: vecConfig.size,
                  distance: vecConfig.distance,
                  namedVector: true,
                },
                metadata: { parentCollection: col.name },
              });
            }
          }
        } catch {
          // æ— æ³•è·å–é›†åˆè¯¦æƒ…
          endpoints.push({
            resourcePath: col.name,
            resourceType: 'collection',
            name: `å‘é‡é›†åˆ: ${col.name}`,
            dataFormat: 'json',
          });
        }
      }

      return endpoints;
    } catch (err) {
      throw normalizeError(err, 'qdrant');
    }
  }

  protected async doHealthCheck(
    params: Record<string, unknown>,
    auth?: Record<string, unknown>
  ): Promise<Omit<HealthCheckResult, 'latencyMs' | 'checkedAt'>> {
    try {
      const client = this.createClient(params, auth);
      const collections = await client.getCollections();

      let totalPoints = 0;
      for (const col of collections.collections) {
        try {
          const info = await client.getCollection(col.name);
          totalPoints += info.points_count || 0;
        } catch { /* ignore */ }
      }

      return {
        status: 'healthy',
        message: `Qdrant æ­£å¸¸ - ${collections.collections.length} ä¸ªé›†åˆ, ${totalPoints} ä¸ªå‘é‡ç‚¹`,
        metrics: {
          collectionsCount: collections.collections.length,
          totalPoints,
        },
      };
    } catch (err) {
      return {
        status: 'unhealthy',
        message: `Qdrant å¥åº·æ£€æŸ¥å¤±è´¥: ${(err as Error).message}`,
      };
    }
  }
}
